fixing message system and workflow update and some UI fix